--- a/jewelery-design-ar.html
+++ b/jewelery-design-ar.html
@@ -44,7 +44,7 @@
                                 <li class="menu-item menu-item-home text-ar1"><a href="index-ar.html">الرئيسية</a>
 
                                 </li>
-                                <li class="menu-item  current-menu-item"><a href="about-us-ar.html" class="text-ar1">من
+                                <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من
                                         نحن</a>
 
                                 </li>
@@ -175,7 +175,7 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css ar-font">
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css ar-font heading7">
                                                             تصميم المجهورات
                                                         </h3>
                                                     </div>
@@ -186,7 +186,7 @@
                                                     class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align">
                                                     <div class="gdlr-core-divider-container">
                                                         <div
-                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-fashion">
+                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-fashion line5-ar">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -201,7 +201,7 @@
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
                                                     <div
-                                                        class="gdlr-core-text-box-item-content prg-width p-color mrg-lft ar-font">
+                                                        class="gdlr-core-text-box-item-content prg-width p-color mrg-lft ar-font pdiv1">
                                                         <p class="ar-float ar-space">هو تصميم كافة أنواع المجوهرات و
                                                             الحلي المصنوعة من مختلف أنواع
                                                             المعادن ثم تحويلها من مادة خام إلى قطع فريدة بتصاميم جذابة،
@@ -230,7 +230,7 @@
                                         <div class="gdlr-core-block-item-title-wrap  gdlr-core-left-align gdlr-core-item-mglr"
                                             style="margin-bottom: 37px ;">
                                             <div class="gdlr-core-block-item-title-inner clearfix">
-                                                <h3 class="gdlr-core-block-item-title titlestyle ar-float ar-font found-mrg-ar module-ar">
+                                                <h3 class="gdlr-core-block-item-title titlestyle ar-float ar-font found-mrg-ar module-ar title5">
                                                     المقررات الدراسية
                                                 </h3>
                                                 <div class="gdlr-core-block-item-title-divider">
@@ -239,16 +239,16 @@
                                         </div>
                                         <div class="gdlr-core-event-item-holder clearfix">
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/jawalry/Creativity.png" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
                                                         <a>الإِبـــداع</a>
                                                     </h3>
-                                                    <p class="font-css ar-float ar-font">
+                                                    <p class="font-css ar-float ar-font text8">
                                                         • تحليل الألوان في التصميم ثلاثي الأبعاد<br>
                                                         • مهارات الرسم والملاحظة<br>
                                                         • صناعة نموذج<br>
@@ -259,16 +259,16 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-design gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-design gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/jawalry/Digital.png" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
                                                         <a>الـرقـمـي</a>
                                                     </h3>
-                                                    <p class="font-css ar-float ar-font">
+                                                    <p class="font-css ar-float ar-font text8">
                                                         • عرض رقمي<br>
                                                         • صياغة التصميم - الرسم الفني<br>
                                                         • ممارسة الاستوديو 2 : طرق التصنيع 2<br>
@@ -279,16 +279,16 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first-left  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first-left  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/jawalry/Design.png" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
                                                         <a>الـتـصـمـيـم</a>
                                                     </h3>
-                                                    <p class="font-css ar-float ar-font">
+                                                    <p class="font-css ar-float ar-font text8">
                                                         • طرق التصنيع 3<br>
                                                         • عرض الكمبيوتر <br>
                                                         • تقديم التصميم<br>
@@ -300,16 +300,16 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-design gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-design gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/jawalry/Theory.png" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
                                                         <a>الـنـظـريـة</a>
                                                     </h3>
-                                                    <p class="font-css ar-float ar-font">
+                                                    <p class="font-css ar-float ar-font text8">
                                                         • تكنولوجيا المجوهرات<br>
                                                         • ممارسة صياغة الفضة<br>
                                                         • تحديد الأحجار الكريمة<br>
@@ -322,8 +322,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="gdlr-core-pbf-wrapper split-section">
-                                        <div class="gdlr-core-pbf-background-wrap img-fash jewelry-img"
+                                    <div class="gdlr-core-pbf-wrapper split-section mrg30">
+                                        <div class="gdlr-core-pbf-background-wrap img-fash jewelry-img height5"
                                             style="background-image: url(img/jawalry/Splitter.png)">
                                             <div class="fash-overlay"></div>
                                         </div>
@@ -331,7 +331,7 @@
                                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container-custom"
                                                 style="max-width: 1440px ;">
                                                 <div class="gdlr-core-pbf-element">
-                                                    <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css ar-font"
+                                                    <h3 id="jewd" class="gdlr-core-title-item-title gdlr-core-skin-title h3-css ar-font visualp"
                                                         dir="rtl">
                                                         الفرص الوظيفية المتاحة بعد الانتهاء من الدبلوم المتقدم <br>أو
                                                         البكالوريوس تصميم المجوهرات :
@@ -343,42 +343,42 @@
                                     </div>
 
 
-                                    <div class="grid-container-3rows ar-float">
+                                    <div class="grid-container-3rows ar-float disp">
                                         <div class="grid-item-3rows">
-                                            <img class="ar-mrg6" src="img/Bullets-01.png" alt="Icon 1">
-                                            <p class="ar-font"> حرفي مجوهرات </p>
+                                            <img class="ar-mrg6 mrg22" src="img/Bullets-01.png" alt="Icon 1">
+                                            <p class="ar-font text8"> حرفي مجوهرات </p>
                                         </div>
                                         <div class="grid-item-3rows">
-                                            <img class="ar-mrg6" src="img/Bullets-01.png" alt="Icon 2">
-                                            <p class="ar-font">بائع مجوهرات</p>
+                                            <img class="ar-mrg6 mrg22" src="img/Bullets-01.png" alt="Icon 2">
+                                            <p class="ar-font text8">بائع مجوهرات</p>
                                         </div>
                                         <div class="grid-item-3rows">
-                                            <img class="ar-mrg6" src="img/Bullets-01.png" alt="Icon 3">
-                                            <p class="ar-font">صانع علامات</p>
+                                            <img class="ar-mrg6 mrg22" src="img/Bullets-01.png" alt="Icon 3">
+                                            <p class="ar-font text8">صانع علامات</p>
                                         </div>
                                         <div class="grid-item-3rows">
-                                            <img class="ar-mrg6" src="img/Bullets-01.png" alt="Icon 4">
-                                            <p class="ar-font">مصمم/فنان مجوهرات</p>
+                                            <img class="ar-mrg6 mrg22" src="img/Bullets-01.png" alt="Icon 4">
+                                            <p class="ar-font text8">مصمم/فنان مجوهرات</p>
                                         </div>
                                         <div class="grid-item-3rows">
-                                            <img class="ar-mrg6" src="img/Bullets-01.png" alt="Icon 5">
-                                            <p class="ar-font">نحّات</p>
+                                            <img class="ar-mrg6 mrg22" src="img/Bullets-01.png" alt="Icon 5">
+                                            <p class="ar-font text8">نحّات</p>
                                         </div>
                                         <div class="grid-item-3rows">
-                                            <img class="ar-mrg6" src="img/Bullets-01.png" alt="Icon 7">
-                                            <p class="ar-font">صائغ جواهر</p>
+                                            <img class="ar-mrg6 mrg22" src="img/Bullets-01.png" alt="Icon 7">
+                                            <p class="ar-font text8">صائغ جواهر</p>
                                         </div>
                                         <div class="grid-item-3rows">
-                                            <img class="ar-mrg6" src="img/Bullets-01.png" alt="Icon 8">
-                                            <p class="ar-font"> مصمم مجوهرات أزياء</p>
+                                            <img class="ar-mrg6 mrg22" src="img/Bullets-01.png" alt="Icon 8">
+                                            <p class="ar-font text8"> مصمم مجوهرات أزياء</p>
                                         </div>
                                         <div class="grid-item-3rows">
-                                            <img class="ar-mrg6" src="img/Bullets-01.png" alt="Icon 9">
-                                            <p class="ar-font"> جوهريّ</p>
+                                            <img class="ar-mrg6 mrg22" src="img/Bullets-01.png" alt="Icon 9">
+                                            <p class="ar-font text8"> جوهريّ</p>
                                         </div>
                                         <div class="grid-item-3rows">
-                                            <img class="ar-mrg6" src="img/Bullets-01.png" alt="Icon 10">
-                                            <p class="ar-font"> خبير إصلاح مجوهرات</p>
+                                            <img class="ar-mrg6 mrg22" src="img/Bullets-01.png" alt="Icon 10">
+                                            <p class="ar-font text8"> خبير إصلاح مجوهرات</p>
                                         </div>
                                     </div>
 
@@ -391,11 +391,11 @@
                     </div>
                 </div>
             </div>
-            <section class="subscription-block">
+            <section class="subscription-block mrg29">
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
-                            <h2>GET IN TOUCH WITH US NOW<br>
+                            <h2 class="text3">GET IN TOUCH WITH US NOW<br>
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
