--- a/visual-communication-ar.html
+++ b/visual-communication-ar.html
@@ -44,7 +44,7 @@
                                 <li class="menu-item menu-item-home text-ar1"><a href="index-ar.html">الرئيسية</a>
 
                                 </li>
-                                <li class="menu-item  current-menu-item"><a href="about-us-ar.html" class="text-ar1">من
+                                <li class="menu-item "><a href="about-us-ar.html" class="text-ar1">من
                                         نحن</a>
 
                                 </li>
@@ -327,7 +327,7 @@
                                                                             <div class="gdlr-core-text-box-item-content"
                                                                                 id="div_983a_27">
                                                                                 <p class="p-about ar-font ar-float"
-                                                                                    style="color: rgb(0, 0, 0);"><br>•
+                                                                                    style="color: rgb(0, 0, 0);">•
                                                                                     التفكير في التصميم<br><br>
                                                                                     • تاريخ الاتصال المرئي <br><br>
                                                                                     • البحث الأكاديمي ومهارات
@@ -344,8 +344,8 @@
                                                 </div>
                                             </div>
 
-                                            <div class="gdlr-core-pbf-wrapper split-section">
-                                                <div class="gdlr-core-pbf-background-wrap img-fash"
+                                            <div class="gdlr-core-pbf-wrapper split-section mrg27">
+                                                <div class="gdlr-core-pbf-background-wrap img-fash height5"
                                                     style="background-image: url(img/Interior/Splitter.png)">
                                                     <div class="fash-overlay"></div>
                                                 </div>
@@ -354,7 +354,7 @@
                                                         style="max-width: 1440px ;">
                                                         <div class="gdlr-core-pbf-element">
                                                             <h3
-                                                                class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css ar-float ar-font ar-mrg visualp">
+                                                                class="gdlr-core-title-item-title gdlr-core-skin-title text8 h3-css ar-font ar-mrg visualp">
                                                                 الفرص الوظيفية المتاحة بعد الانتهاء من الدبلوم المتقدم
                                                                 أو البكالوريوس للاتصال المرئي
                                                             </h3>
@@ -363,30 +363,30 @@
                                                 </div>
                                             </div>
 
-                                            <div class="grid-container-intr ar-float">
+                                            <div class="grid-container-intr ar-float mrg23">
                                                 <div class="grid-item">
-                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 1">
-                                                    <p class="ar-font">مديرة تصميم</p>
+                                                    <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 1">
+                                                    <p class="ar-font text5">مديرة تصميم</p>
                                                 </div>
                                                 <div class="grid-item">
-                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 2">
-                                                    <p class="ar-font">مدير فني للإعلان </p>
+                                                    <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 2">
+                                                    <p class="ar-font text5">مدير فني للإعلان </p>
                                                 </div>
                                                 <div class="grid-item">
-                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 3" dir="rtl">
-                                                    <p class="ar-font">مصممة مواد تحريرية </p>
+                                                    <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 3" dir="rtl">
+                                                    <p class="ar-font text5">مصممة مواد تحريرية </p>
                                                 </div>
                                                 <div class="grid-item">
-                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 4">
-                                                    <p class="ar-font">مصممة هوية المؤسسات </p>
+                                                    <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 4">
+                                                    <p class="ar-font text5">مصممة هوية المؤسسات </p>
                                                 </div>
                                                 <div class="grid-item">
-                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 5">
-                                                    <p class="ar-font">أخصائية رسوم إيضاحية</p>
+                                                    <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 5">
+                                                    <p class="ar-font text5">أخصائية رسوم إيضاحية</p>
                                                 </div>
                                                 <div class="grid-item">
-                                                    <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 6">
-                                                    <p class="ar-font">مصمم المصور</p>
+                                                    <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 6">
+                                                    <p class="ar-font text5">مصمم المصور</p>
                                                 </div>
                                             </div>
 
@@ -396,7 +396,7 @@
                             </div>
                         </div>
                     </div>
-                    <section class="subscription-block">
+                    <section class="subscription-block mrg24">
                         <div>
                             <div class="subscribe-box">
                                 <div class="inner wow fadeIn">
