--- a/fashion-design-ar.html
+++ b/fashion-design-ar.html
@@ -44,7 +44,7 @@
                                 <li class="menu-item menu-item-home text-ar1"><a href="index-ar.html">الرئيسية</a>
 
                                 </li>
-                                <li class="menu-item  current-menu-item"><a href="about-us-ar.html" class="text-ar1">من
+                                <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من
                                         نحن</a>
 
                                 </li>
