--- a/fashion-management-design-ar.html
+++ b/fashion-management-design-ar.html
@@ -44,7 +44,7 @@
                                 <li class="menu-item menu-item-home text-ar1"><a href="index-ar.html">الرئيسية</a>
 
                                 </li>
-                                <li class="menu-item  current-menu-item"><a href="about-us-ar.html" class="text-ar1">من
+                                <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من
                                         نحن</a>
 
                                 </li>
@@ -178,7 +178,7 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css2 ar-font ar-mrg3">
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css2 ar-font ar-mrg3 heading6">
                                                             الـتــســويــق وإدارة الأزيــاء
                                                         </h3>
                                                     </div>
@@ -189,7 +189,7 @@
                                                     class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align">
                                                     <div class="gdlr-core-divider-container">
                                                         <div
-                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-manage">
+                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-manage line2-ar">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -204,7 +204,7 @@
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
                                                     <div
-                                                        class="gdlr-core-text-box-item-content prg-width p-color ar-font">
+                                                        class="gdlr-core-text-box-item-content prg-width p-color ar-font pdiv1">
                                                         <p class="ar-float">هو مجال مثير وشيق يفتح الباب أمام فرص عمل لا
                                                             حصر لها في مجال
                                                             صناعة الأزياء، حيث يتعلم الطلاب تقنيات الشراء والتسويق، وطرق
@@ -236,7 +236,7 @@
                                             style="margin-bottom: 37px ;">
                                             <div class="gdlr-core-block-item-title-inner clearfix">
                                                 <h3
-                                                    class="gdlr-core-block-item-title titlestyle ar-float ar-font found-mrg-ar module-ar">
+                                                    class="gdlr-core-block-item-title titlestyle ar-float ar-font found-mrg-ar module-ar title5">
                                                     المقررات الدراسية
                                                 </h3>
                                                 <div class="gdlr-core-block-item-title-divider">
@@ -245,16 +245,16 @@
                                         </div>
                                         <div class="gdlr-core-event-item-holder clearfix">
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows-left gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows-left gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/fashion-manage/theory.jpg" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
                                                         <a>نــظـريــة</a>
                                                     </h3>
-                                                    <p class="font-css ar-float ar-font">
+                                                    <p class="font-css ar-float ar-font text8">
                                                         • التصوير الرقمى<br>
                                                         • تسويق الأزياء<br>
                                                         • البحث الإلكتروني<br>
@@ -267,16 +267,16 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows-left gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows-left gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/fashion-manage/marketing.jpg" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
                                                         <a>تــســويــق</a>
                                                     </h3>
-                                                    <p class="font-css ar-float ar-font">
+                                                    <p class="font-css ar-float ar-font text8">
                                                         • نظرية اللون ومبادئ التصميم للموضة<br>
                                                         • اساسيات التسويق <br>
                                                         • الألياف ومنسوجات <br>
@@ -289,16 +289,16 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows gdlr-core-column-3-row-left  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows gdlr-core-column-3-row-left  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/fashion-manage/management.jpg" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
                                                         <a>إدارة</a>
                                                     </h3>
-                                                    <p class="font-css ar-font ar-float">
+                                                    <p class="font-css ar-font ar-float text8">
                                                         • تنسيق الموضة والترويج لها<br>
                                                         • رؤية وسلوك المستهلك<br>
                                                         • ادارة الموارد البشرية<br>
@@ -315,8 +315,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="gdlr-core-pbf-wrapper split-section">
-                                        <div class="gdlr-core-pbf-background-wrap splitter-img"
+                                    <div class="gdlr-core-pbf-wrapper split-section mrg25">
+                                        <div class="gdlr-core-pbf-background-wrap splitter-img height6"
                                             style="background-image: url(img/fashion-manage/splitter.jpg)">
                                             <div class="fash-overlay"></div>
                                         </div>
@@ -324,8 +324,8 @@
                                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container-custom"
                                                 style="max-width: 1440px ;">
                                                 <div class="gdlr-core-pbf-element ">
-                                                    <h3
-                                                        class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css-splitter mrg-top ar-font ar-mrg4" dir="rtl">
+                                                    <h3 id="vmd"
+                                                        class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-splitter mrg-top ar-font ar-mrg4 visualp" dir="rtl">
                                                         الفرص الوظيفية المتاحة بعد الانتهاء من الدبلوم المتقدم أو<br>
                                                         البكالوريوس للتسويق وإدارة الأزياء:
                                                     </h3>
@@ -337,44 +337,44 @@
 
                                     <div class="grid-container2 ar-float">
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 1">
-                                            <p class="ar-font">مسؤولة مشتريات </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 1">
+                                            <p class="ar-font text5">مسؤولة مشتريات </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 2">
-                                            <p class="ar-font">محررة أزياء </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 2">
+                                            <p class="ar-font text5">محررة أزياء </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 3">
-                                            <p class="ar-font">أستشارية (منسقة تصوير) </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 3">
+                                            <p class="ar-font text5">أستشارية (منسقة تصوير) </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 4">
-                                            <p class="ar-font">مديرة منتج </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 4">
+                                            <p class="ar-font text5">مديرة منتج </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 5">
-                                            <p class="ar-font">تاجرة في مجال الأزياء </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 5">
+                                            <p class="ar-font text5">تاجرة في مجال الأزياء </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 6">
-                                            <p class="ar-font">منسقة أزياء </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 6">
+                                            <p class="ar-font text5">منسقة أزياء </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 7">
-                                            <p class="ar-font">مسؤولة علاقات عامة </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 7">
+                                            <p class="ar-font text5">مسؤولة علاقات عامة </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 8">
-                                            <p class="ar-font">مديرة مناسبات </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 8">
+                                            <p class="ar-font text5">مديرة مناسبات </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 9">
-                                            <p class="ar-font">باحثة تسويق </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 9">
+                                            <p class="ar-font text5">باحثة تسويق </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 10">
-                                            <p class="ar-font">خبيرة تسويق مرئي</p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 10">
+                                            <p class="ar-font text5">خبيرة تسويق مرئي</p>
                                         </div>
                                     </div>
 
@@ -384,11 +384,11 @@
                     </div>
                 </div>
             </div>
-            <section class="subscription-block">
+            <section class="subscription-block mrg26">
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
-                            <h2>GET IN TOUCH WITH US NOW<br>
+                            <h2 class="text3">GET IN TOUCH WITH US NOW<br>
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
