--- a/foundation-studies-ar.html
+++ b/foundation-studies-ar.html
@@ -45,7 +45,7 @@
                                         href="index-ar.html">الرئيسية</a>
 
                                 </li>
-                                <li class="menu-item  current-menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
+                                <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
 
                                 </li>
                                 <li class="menu-item"><a href="services-ar.html" class="text-ar1">خدماتنا</a>
@@ -172,7 +172,7 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title ar-float found-ar ar-font">
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title heading1 found-ar ar-font">
                                                             شهادة أساسيات التصميم
                                                         </h3>
                                                     </div>
@@ -243,7 +243,7 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font"><a href="#">تعلُم
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5"><a href="#">تعلُم
                                                             الدراسة</a></h3>
                                                     <p class="font-css ar-float ar-font found-font">
                                                         الهدف من هذه الوحدة هو مساعدة الطالبات على اكتشاف أنفسهم ليكونوا
@@ -260,7 +260,7 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap"> 
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font"><a href="#">الرسم
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5"><a href="#">الرسم
                                                             للمبتدئين</a></h3>
                                                     <p class="font-css ar-float ar-font found-font">
                                                         الهدف من هذه الوحدة هو تطوير مهارات الملاحظة لدى الطالبات وتعلُم
@@ -279,7 +279,7 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font"><a href="#">تاريخ
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5"><a href="#">تاريخ
                                                             الفن</a></h3>
                                                     <p class="font-css ar-float ar-font found-font">
                                                         الهدف من هذه الوحدة هو تعريف الطالبات بالفن وطرق التعبير عنه
