--- a/interior-design-ar.html
+++ b/interior-design-ar.html
@@ -44,7 +44,7 @@
                                 <li class="menu-item menu-item-home text-ar1"><a href="index-ar.html">الرئيسية</a>
 
                                 </li>
-                                <li class="menu-item  current-menu-item"><a href="about-us-ar.html" class="text-ar1">من
+                                <li class="menu-item "><a href="about-us-ar.html" class="text-ar1">من
                                         نحن</a>
 
                                 </li>
@@ -178,7 +178,7 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title ar-font ar-mrg5 h3-css">
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title ar-font ar-mrg5 h3-css heading7">
                                                             التصميم الداخلي
                                                         </h3>
                                                     </div>
@@ -189,7 +189,7 @@
                                                     class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align">
                                                     <div class="gdlr-core-divider-container">
                                                         <div
-                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-fashion">
+                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-fashion line4-ar">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -204,7 +204,7 @@
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
                                                     <div
-                                                        class="gdlr-core-text-box-item-content prg-width p-color ar-font mrg-lft">
+                                                        class="gdlr-core-text-box-item-content prg-width p-color ar-font mrg-lft pdiv1">
                                                         <p class="ar-float ar-space"> التصميم الداخلي هو الفن والعلم الذي يُعزِّز
                                                             المباني من
                                                             الداخل، ويزيد من الناحية الجمالية لهم.
@@ -235,7 +235,7 @@
                                             style="margin-bottom: 37px ;">
                                             <div class="gdlr-core-block-item-title-inner clearfix">
                                                 <h3
-                                                    class="gdlr-core-block-item-title titlestyle ar-float ar-font found-mrg-ar module-ar">
+                                                    class="gdlr-core-block-item-title titlestyle ar-float ar-font found-mrg-ar module-ar title5">
                                                     المقررات الدراسية
                                                 </h3>
                                                 <div class="gdlr-core-block-item-title-divider">
@@ -244,16 +244,16 @@
                                         </div>
                                         <div class="gdlr-core-event-item-holder clearfix">
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/Interior/Creativity.png" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
                                                         <a>الإِبـــداع</a>
                                                     </h3>
-                                                    <p class="font-css ar-float ar-font">
+                                                    <p class="font-css ar-float ar-font text8">
                                                         • تاريخ الأثاث والتطبيق<br>
                                                         • الإضاءة البيئية Oce<br>
                                                         • البحث اكاديمي و مهارات التواصل<br>
@@ -264,16 +264,16 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-design gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-design gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/Interior/Digital.png" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
                                                         <a>الـرقـمـي</a>
                                                     </h3>
-                                                    <p class="font-css ar-float ar-font">
+                                                    <p class="font-css ar-float ar-font text8">
                                                         • رسم ثنائي الأبعاد بالحاسوب<br>
                                                         • الخامات والتشطيبات الداخلية<br>
                                                         • رسم ثلاثي الأبعاد بالحاسوب<br>
@@ -284,16 +284,16 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first-left  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first-left  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/Interior/Design.png" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
                                                         <a>الـتـصـمـيـم</a>
                                                     </h3>
-                                                    <p class="font-css ar-float ar-font">
+                                                    <p class="font-css ar-float ar-font text8">
                                                         • مبادئ التصميم الداخلي (نظري)<br>
                                                         • الرسم اليدوي الحر<br>
                                                         • الصياغة المعمارية<br>
@@ -304,16 +304,16 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-design gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-design gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/Interior/Theory.png" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
                                                         <a>الـنـظـريـة</a>
                                                     </h3>
-                                                    <p class="font-css ar-float ar-font">
+                                                    <p class="font-css ar-float ar-font text8">
                                                         • رسم العروض التقديمية<br>
                                                         • دراسات ثقافية<br>
                                                         • تطوير مفهوم الإبداع<br>
@@ -325,8 +325,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="gdlr-core-pbf-wrapper split-section">
-                                        <div class="gdlr-core-pbf-background-wrap img-fash"
+                                    <div class="gdlr-core-pbf-wrapper split-section mrg28">
+                                        <div class="gdlr-core-pbf-background-wrap img-fash height5"
                                             style="background-image: url(img/Interior/Splitter.png)">
                                             <div class="fash-overlay"></div>
                                         </div>
@@ -334,8 +334,8 @@
                                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container-custom"
                                                 style="max-width: 1440px ;">
                                                 <div class="gdlr-core-pbf-element">
-                                                    <h3
-                                                        class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css ar-font" dir="rtl">
+                                                    <h3 id="inter"
+                                                        class="gdlr-core-title-item-title gdlr-core-skin-title h3-css ar-font visualp" dir="rtl">
                                                         الفرص الوظيفية المتاحة بعد الانتهاء من الدبلوم المتقدم<br> أو
                                                         البكالوريوس للتصميم الداخلي :
                                                     </h3>
@@ -346,44 +346,44 @@
 
                                     <div class="grid-container2 ar-float">
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 1">
-                                            <p class="ar-font">خبيرة تصميم ببرنامج كاد</p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 1">
+                                            <p class="ar-font  text5">خبيرة تصميم ببرنامج كاد</p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 2">
-                                            <p class="ar-font">اخصائية تصميم معارض </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 2">
+                                            <p class="ar-font  text5">اخصائية تصميم معارض </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 3">
-                                            <p class="ar-font">اخصائية تصميم إضاءة </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 3">
+                                            <p class="ar-font  text5">اخصائية تصميم إضاءة </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 4">
-                                            <p class="ar-font"> خبيرة تصميم داخلي سكني</p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 4">
+                                            <p class="ar-font  text5"> خبيرة تصميم داخلي سكني</p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 5">
-                                            <p class="ar-font">خبيرة تصميم داخلي </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 5">
+                                            <p class="ar-font  text5">خبيرة تصميم داخلي </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 6">
-                                            <p class="ar-font">اخصائية تصميم مفروشات </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 6">
+                                            <p class="ar-font  text5">اخصائية تصميم مفروشات </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 7">
-                                            <p class="ar-font">مديرة مرافق </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 7">
+                                            <p class="ar-font  text5">مديرة مرافق </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 8">
-                                            <p class="ar-font">مستنشارة تصميم </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 8">
+                                            <p class="ar-font  text5">مستنشارة تصميم </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 9">
-                                            <p class="ar-font">مصلمة تصميم </p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 9">
+                                            <p class="ar-font  text5">مصلمة تصميم </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 10">
-                                            <p class="ar-font">معلم تصميم</p>
+                                            <img class="ar-mrg2 mrg22" src="img/Bullets-01.png" alt="Icon 10">
+                                            <p class="ar-font  text5">معلم تصميم</p>
                                         </div>
                                     </div>
 
@@ -393,11 +393,11 @@
                     </div>
                 </div>
             </div>
-            <section class="subscription-block">
+            <section class="subscription-block mrg29">
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
-                            <h2>GET IN TOUCH WITH US NOW<br>
+                            <h2 class="text3">GET IN TOUCH WITH US NOW<br>
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
