--- a/services-ar.html
+++ b/services-ar.html
@@ -50,7 +50,7 @@
                                 <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
 
                                 </li>
-                                <li class="menu-item  current-menu-item"><a href="services-ar.html" class="text-ar1">خدماتنا</a>
+                                <li class="menu-item "><a href="services-ar.html" class="text-ar1">خدماتنا</a>
                                 </li>
                                 <li class="menu-item"><a href="programs-ar.html" class="text-ar1">البرامج</a>
                                 </li>
