--- a/index-ar.html
+++ b/index-ar.html
@@ -754,7 +754,7 @@
                                                 <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-right-align "
                                                     style="padding-bottom: 0px ;"><a
                                                         class="gdlr-core-button gdlr-core-button-solid gdlr-core-button-no-border button1 aos-init"
-                                                        href="course-admission.html" data-aos="fade-left"
+                                                        href="course-admission-ar.html" data-aos="fade-left"
                                                         data-aos-duration="500" data-aos-delay="200"
                                                         style="font-size: 15px ;color: #ffffff ;padding: 5px 20px 5px 20px;text-transform: none ;border-radius: 2px;-moz-border-radius: 2px;-webkit-border-radius: 2px;"><span
                                                             class="gdlr-core-content text2">سجل الآن</span></a></div>
@@ -769,7 +769,6 @@
                         data-skin="Column White">
                         <div class="gdlr-core-pbf-background-wrap"
                             style="background-image:url(img/9-01.png) ;background-repeat: no-repeat;background-size: cover;">
-                            <!-- <div class="overlay2"></div> -->
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
