--- a/admission-ar.html
+++ b/admission-ar.html
@@ -573,7 +573,7 @@
                                                                     placeholder="Type your message here.."></textarea></span>
                                                         </p>
 
-                                                        <a class="terms" href="terms-conditions.html">Terms &
+                                                        <a class="terms" href="terms-conditions-ar.html">Terms &
                                                             Conditions</a>
                                                         <div class="form-check">
                                                             <input class="form-check-input" type="checkbox" value=""
