--- a/contact-ar.html
+++ b/contact-ar.html
@@ -38,7 +38,7 @@
                     <div class="kingster-mobile-menu"><a
                             class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger"
                             href="#kingster-mobile-menu"><span></span></a>
-                        <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
+                        <div class="kingster-mm-menu-wrap kingster-navigation-font ar-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
                                 <li class="menu-item menu-item-home text-ar1"><a
@@ -166,7 +166,7 @@
                                     <div
                                         class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                                         <div class="gdlr-core-title-item-title-wrap clearfix">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title title4 cont-ar">
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title title4 cont-ar ar-font">
                                                 تــواصــل مــعــنــا</h3>
                                         </div>
                                         <span
