--- a/index-ar.html
+++ b/index-ar.html
@@ -48,7 +48,7 @@
                     <div class="kingster-mobile-menu"><a
                             class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger"
                             href="#kingster-mobile-menu"><span></span></a>
-                        <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
+                        <div class="kingster-mm-menu-wrap kingster-navigation-font ar-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
                                 <li class="menu-item menu-item-home current-menu-item text-ar1"><a
@@ -754,7 +754,7 @@
                                                 <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-right-align "
                                                     style="padding-bottom: 0px ;"><a
                                                         class="gdlr-core-button gdlr-core-button-solid gdlr-core-button-no-border button1 aos-init"
-                                                        href="course-admission.html" data-aos="fade-left"
+                                                        href="course-admission-ar.html" data-aos="fade-left"
                                                         data-aos-duration="500" data-aos-delay="200"
                                                         style="font-size: 15px ;color: #ffffff ;padding: 5px 20px 5px 20px;text-transform: none ;border-radius: 2px;-moz-border-radius: 2px;-webkit-border-radius: 2px;"><span
                                                             class="gdlr-core-content text2">سجل الآن</span></a></div>
@@ -799,7 +799,7 @@
                                                                 تخصصـــات
                                                                 التصميم المقدمة في المعهد</p> <a
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font mrg14"
-                                                                href="scholarships.html"
+                                                                href="scholarships-ar.html"
                                                                 style="font-style: normal ;margin-top: 0px ;color: white;margin-left: 78%;">اقرأ
                                                                 المزيد</a>
                                                         </div>
@@ -836,7 +836,7 @@
                                                                 والعشرين
                                                             </p> <a
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font mrg14"
-                                                                href="lifeinriyadh.html"
+                                                                href="lifeinriyadh-ar.html"
                                                                 style="font-style: normal ;margin-top: 0px ;color: white;margin-left: 78%;">اقرأ
                                                                 المزيد</a>
                                                         </div>
@@ -874,7 +874,7 @@
                                                                 الأمير
                                                                 تركي بن ​​عبد العزيــز الأول</p> <a
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font mrg14"
-                                                                href="about-us.html"
+                                                                href="about-us-ar.html"
                                                                 style="font-style: normal ;margin-top: 0px ;color: white;margin-left: 78%;">اقرأ
                                                                 المزيد</a>
                                                         </div>
