--- a/services-ar.html
+++ b/services-ar.html
@@ -40,7 +40,7 @@
                     <div class="kingster-mobile-menu"><a
                             class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger"
                             href="#kingster-mobile-menu"><span></span></a>
-                        <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
+                        <div class="kingster-mm-menu-wrap kingster-navigation-font ar-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
                                 <li class="menu-item menu-item-home text-ar1"><a
@@ -50,7 +50,7 @@
                                 <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
 
                                 </li>
-                                <li class="menu-item "><a href="services-ar.html" class="text-ar1">خدماتنا</a>
+                                <li class="menu-item  current-menu-item"><a href="services-ar.html" class="text-ar1">خدماتنا</a>
                                 </li>
                                 <li class="menu-item"><a href="programs-ar.html" class="text-ar1">البرامج</a>
                                 </li>
