--- a/collaboration-ar.html
+++ b/collaboration-ar.html
@@ -39,7 +39,7 @@
                     <div class="kingster-mobile-menu"><a
                             class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger"
                             href="#kingster-mobile-menu"><span></span></a>
-                        <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
+                        <div class="kingster-mm-menu-wrap kingster-navigation-font ar-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
                                 <li class="menu-item menu-item-home text-ar1"><a
@@ -168,7 +168,7 @@
                                         class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                                         <div class="gdlr-core-title-item-title-wrap clearfix">
                                             <h3
-                                                class="gdlr-core-title-item-title gdlr-core-skin-title title4 collab-ar">
+                                                class="gdlr-core-title-item-title gdlr-core-skin-title title4 collab-ar ar-font">
                                                 شــركــاء الــنــجــاح</h3>
                                         </div><span
                                             class="collab-ar2 gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption title6">
