--- a/gallery-ar.html
+++ b/gallery-ar.html
@@ -38,7 +38,7 @@
                     <div class="kingster-mobile-menu"><a
                             class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger"
                             href="#kingster-mobile-menu"><span></span></a>
-                        <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
+                        <div class="kingster-mm-menu-wrap kingster-navigation-font ar-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
                                 <li class="menu-item menu-item-home text-ar1"><a
@@ -981,7 +981,7 @@
                     </div>
                 </div>
             </div>
-            <section class="subscription-block sub-mrg subscription-block-gal">
+            <section class="subscription-block sub-mrg subscription-block-gal-ar">
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
